<resources>
    <string name="app_name">天气</string>
    <string name="author">Author TOKYONTH</string>
    <string name="version">Version </string>
    <string name="celsius">%s ℃</string>
    <string name="degree">°</string>

    <string name="text_positioning">定位中…</string>
    <string name="text_import_data">正在导入数据…</string>
    <string name="text_source_nmc">数据来源于中国气象局</string>
    <string name="text_source_hefeng">数据来源于 和风天气™</string>
    <string name="text_hot_city">热门城市</string>
    <string name="text_tips">提示</string>
    <string name="text_exit">退出</string>
    <string name="text_definite">确定</string>
    <string name="text_cancel">取消</string>
    <string name="text_manual_selection">手动选择</string>
    <string name="text_failed_location">未能成功定位,请手动选择一个城市</string>
    <string name="text_import_success">导入成功</string>
    <string name="text_import_failed">导入失败!请稍后重试</string>
    <string name="text_permission_title">权限说明</string>
    <string name="text_permission_msg">定位权限用于获取所在地点的城市信息，
        存储权限用于高德定位写入离线定位数据。</string>
    <string name="text_allow_permission">必须同意所有权限才能使用本应用程序!</string>
    <string name="text_network_not_connection">你似乎没有连接到网络，请连接网络后重试</string>
    <string name="text_none_notification_permission">没有通知权限!</string>

    <string name="title_add_city">添加城市</string>
    <string name="title_warning">气象预警</string>
    <string name="title_settings">设置</string>
    <string name="title_about">关于</string>
    <string name="title_city_manager">城市管理</string>
    <string name="title_menu_shard">分享</string>
    <string name="title_menu_warning">预警</string>
    <string name="title_menu_settings">设置</string>
    <string name="title_menu_city_manager">城市管理</string>

    <string name="hint_city_search">搜索地名</string>

    <string name="summary_text_on">开</string>
    <string name="summary_text_off">关</string>
    <string name="summary_notification">通知</string>
    <string name="summary_notification_title">通知栏天气</string>
    <string name="summary_personalise_title">个性化</string>
    <string name="summary_image_background">使用图片背景</string>
    <string name="summary_choice_image">选择一张图片</string>
    <string name="summary_blur_title">高斯模糊</string>
    <string name="summary_blur_radius">模糊半径</string>
    <string name="summary_blur_pager">模糊天气信息卡片</string>
    <string name="summary_other_title">更多</string>
    <string name="summary_open_source">开源</string>
    <string name="summary_about">关于</string>
</resources>
